--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,4 +5,6 @@
 
 :root {
   --el-menu-base-level-padding: 18px;
+  --sidebar-box-shadow: 1px 0 4px rgba(0, 21, 41, 0.08);
+  --navbar-box-shadow: 0 1px 4px rgba(0, 21, 41, 0.08);
 }
